# AthenaOS

./: .gitattributes  .gitignore  .rename_delete_pending  AGENTS.md  Athena_Concept.md  Audit.md  BUG_REPORT.md  CHECKLIST.md  CLAUDE.md  Cargo.toml  FinalChecklist.md  GOAL_PROMPT.md  LEGACY_GAMING_CONCEPT.md  MILESTONE_A_PLAN.md  MasterChecklist.md  NEW_BUG_DISCOVERY.md  PRODUCTION_CHECKLIST.md  README.md  REORG_PLAN.md  RaeenOS_Concept.md  kernelchecklist.md  musl.json  redox.json  rust-toolchain.toml  scratchpad-cap-fix.patch  scratchpad_find_vfct.sh  scratchpad_psp.sh  scratchpad_vfct_layout.sh  scratchpad_vfct_layout2.sh  scratchpad_vfio_autotest.sh  scratchpad_wsl_build.sh  scratchpad_wsl_probe.sh  scratchpad_wsl_setup.sh
.cargo/: config.toml
.gemini/: GEMINI.md  implementation_plan.md
agents/: OWNERSHIP.toml
amdgpud/: Cargo.toml  build.rs
amdgpud/src/: main.rs
apps/browser/: Cargo.toml
apps/browser/src/: dom_js.rs  events.rs  lib.rs  main.rs  tabs.rs
apps/calculator/: Cargo.toml  RaeManifest.toml
apps/calculator/src/: main.rs
apps/calendar/: Cargo.toml
apps/calendar/src/: lib.rs  main.rs
apps/clock/: Cargo.toml
apps/clock/src/: main.rs
apps/files/: Cargo.toml
apps/files/src/: lib.rs  main.rs
apps/hello_athui/: Cargo.toml
apps/hello_athui/src/: main.rs
apps/hello_raeui/: Cargo.toml
apps/hello_raeui/src/: main.rs
apps/mail/: Cargo.toml
apps/mail/src/: lib.rs  main.rs
apps/music/: Cargo.toml
apps/music/src/: main.rs
apps/notes/: Cargo.toml
apps/notes/src/: main.rs
apps/passwords/: Cargo.toml
apps/passwords/src/: lib.rs  main.rs
apps/photos/: Cargo.toml
apps/photos/src/: lib.rs  main.rs
apps/sync/: Cargo.toml
apps/sync/src/: lib.rs  main.rs
apps/task_mgr/: Cargo.toml
apps/task_mgr/src/: main.rs
apps/text_editor/: Cargo.toml
apps/text_editor/src/: main.rs
athbridge_host/: Cargo.toml
athbridge_run/: Cargo.toml
athbridge_run/src/: main.rs
athinstaller/: Cargo.toml
athinstaller/src/: main.rs
athlangd/: Cargo.toml
athlangd/src/: main.rs
conductor/: iommu-usb-plan.md  raegfx-raeui-plan.md
config/: base.toml
docs/: ANTICHEAT_STRATEGY.md  APP_DEVELOPER_GUIDE.md  ARCHITECTURE.md  ATHENA_GROUND_TRUTH.md  ATHENA_INSTALL.md  ATTESTATION_API.md  AUTONOMY_CHARTER.md  BARE_METAL_CHECKLIST.md  BOOT_PACKAGING.md  BOOT_STATUS.md  BUILD_CODEGEN_BUG.md  CAPABILITIES.md  COGNITIVE_STACK.md  DRIVERS.md  FIRMWARE.md  FileSystem.md  HARDWARE_PATH.md  INPUT_PIPELINE.md  IRON_FLASH_VERDICT_RUNBOOK.md  LINUXKPI_PHASE1.md  LINUXKPI_PHASE2.md  LINUX_DRIVER_STRATEGY.md  NATIVE_DRIVER_PLAN.md  OSS_RECOMMENDATIONS.md  PARITY_MATRIX.md  PARKED_GAMING.md  PERFORMANCE_TARGETS.md  PROCFS.md  QUARANTINED_MODULES.md  RAEUI_COMPOSITOR_PLAN.md  RDNA2_GPU_PATH.md  REDOX_EXTRACTION_MAP.md  ROADMAP.md  SAFETY.md  SAFE_ATHENA_BOOT.md  SETTINGS_CATALOG.md  SYSCALL_TABLE.md  TESTING_STRATEGY.md  THIRD_PARTY_LICENSES.md  THREAT_MODEL.md  (+6 more)
driver_supervisor/: Cargo.toml
driver_supervisor/src/: main.rs
hello_linuxkpi/: Cargo.toml
hello_relibc/: Cargo.toml  build.rs
hello_window/: Cargo.toml
i915d/: Cargo.toml
i915d/src/: main.rs
kernel/: Cargo.toml  build.rs  msi_stubs.txt
kernel/.cargo/: config.toml
kernel/src/: a11y.rs  a11y_input.rs  acpi.rs  acpi_full.rs  acpi_quirks.rs  aer.rs  ahci.rs  aml_bridge.rs  anticheat.rs  apic.rs  app_bundle.rs  app_paths.rs  athbridge_boot.rs  athfs.rs  audio.rs  audit.rs  aurora.rs  battery.rs  block_io.rs  bluetooth.rs  boot_selftest.rs  bootlog.rs  bootlog_persist.rs  cap_audit.rs  capability.rs  captions.rs  clipboard.rs  compositor.rs  compress.rs  config_registry.rs  console.rs  context.rs  cpu_features.rs  cpufreq.rs  cpuidle.rs  crash_dump.rs  crypto.rs  data_buckets.rs  dbus_kernel.rs  debug.rs  (+169 more)
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: addr.rs  mmu.rs  mod.rs
kernel/src/arch/x86_64/: addr.rs  mmu.rs  mod.rs
kernel/src/memory/: allocator.rs  buddy.rs
kernel/src/shell_runner/: overlay.rs
kernel/src/smp/: trampoline.asm
keys/: README.md  dev-signing.key  dev-signing.pub
linux_hello/: Cargo.toml
linux_hello/src/: main.rs
linuxkpi-drm/: .gitignore  M4-NEXT-FILES.md  M5-BAREMETAL-PLAN.md  M5-DEVICE-SEAM.md  M5-ONPATH-AUDIT.md  Makefile  README.md  SCOPE.md  SYMBOL-GAP.md  amdgpu-symbol-gap.txt  amdgpu-symbols-covered.txt  amdgpu-undefined-symbols.txt  bringup_drm.c  bringup_entry.c  bringup_ip_noop.c  bringup_render.c  bringup_xcp_none.c  fetch-source.sh  m4-link.sh  m4c-link.sh
logs/: BOOTLOG.dump.txt  BOOTLOG.netlog.txt  BOOTLOG_20260621_050943.dump.txt  BOOTLOG_20260622_065153.dump.txt  BOOTLOG_20260622_072405.dump.txt  BOOTLOG_20260622_141919.dump.txt  BOOTLOG_20260622_144658.dump.txt  BOOTLOG_20260622_150355.dump.txt  BOOTLOG_20260622_160558.dump.txt  BOOTLOG_20260622_162824.dump.txt  BOOTLOG_20260622_170417.dump.txt  BOOTLOG_20260622_171953.dump.txt  BOOTLOG_20260622_183253.dump.txt  BOOTLOG_20260622_185829.dump.txt  BOOTLOG_20260622_223829.dump.txt  BOOTLOG_20260622_233600.dump.txt  BOOTLOG_20260623_002046.dump.txt  BOOTLOG_20260623_022858.dump.txt  BOOTLOG_20260623_024822.dump.txt  BOOTLOG_20260623_031738.dump.txt  BOOTLOG_20260623_034417.dump.txt  BOOTLOG_20260623_041507.dump.txt  BOOTLOG_20260623_044014.dump.txt  BOOTLOG_20260623_064823.dump.txt  BOOTLOG_20260623_145931.dump.txt  BOOTLOG_20260623_163706.dump.txt  BOOTLOG_20260623_171414.dump.txt  BOOTLOG_20260623_175656.dump.txt  BOOTLOG_20260623_181232.dump.txt  BOOTLOG_20260623_183832.dump.txt  BOOTLOG_20260623_185309.dump.txt  BOOTLOG_20260623_191154.dump.txt  BOOTLOG_20260623_193558.dump.txt  BOOTLOG_20260623_195252.dump.txt  BOOTLOG_20260623_213619.dump.txt  BOOTLOG_20260623_220442.dump.txt  BOOTLOG_20260623_224734.dump.txt  BOOTLOG_20260624_023938.dump.txt  (+81 more)
nvidiad/: Cargo.toml
nvidiad/src/: main.rs
raebridge_run/: Cargo.toml
raebridge_run/src/: main.rs
raeinstaller/: Cargo.toml
raeinstaller/src/: main.rs
raelangd/: Cargo.toml
raelangd/src/: main.rs
rootfs/: README.md
user_init/: Cargo.toml
user_init/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs  recipe.rs
(+1424 files in other folders)
