[workspace]
resolver = "2"
exclude = ["target"]
members = [
    "kernel",
    "xtask",
    "components/athbody",
    "components/athsense",
    "components/athmind",
    "components/athvoice",
    "components/athguard",
    "components/raefs",
    "components/pcid",
    "components/raefat",
    "components/raegfx",
    "components/raeaudio",
    "components/raepkg",
    "components/raewasm",
    "components/raeui",
    "components/raekit",
    "components/raeshield",
    "components/raenet",
    "components/raessh",
    "components/raestore",
    "components/raeid",
    "components/raesync",
    "components/raebridge",
    "components/raeprint",
    "components/raeplay",
    "components/raeshell",
    "components/raemedia",
    "components/raeweb",
    "components/raecloud",
    "components/raeupdate",
    "components/raesettings",
    "components/raeai",
    "components/raeaccessibility",
    "components/raevpn",
    "components/raebackup",
    "components/raecontainer",
    "components/raepackage",
    "components/raefont",
    "components/raelang",
    "components/raelocale",
    "components/rae_abi",
    "components/rae_render_broker",
    "components/aarch64_logic",
    "components/rae_crypto",
    "components/rae_driver_api",
    "components/rae_tokens",
    "components/rae_calc",
    "components/rae_time",
    "components/rae_json",
    "components/rae_hash",
    "components/rae_csv",
    "components/rae_toml",
    "components/rae_diff",
    "components/rae_formats",
    "components/rae_image",
    "components/rae_encode",
    "components/rae_regex",
    "components/rae_js",
    "components/rae_pwa",
    "components/rae_markdown",
    "components/rae_mail",
    "components/rae_pim",
    "components/rae_mime",
    "components/rae_zip",
    "components/rae_kv",
    "components/rae_otp",
    "components/rae_keychain",
    "components/rae_docx",
    "components/rae_xlsx",
    "components/rae_pdf",
    "components/rae_mp4",
    "components/rae_deflate",
    "components/rae_tar",
    "components/rae_gif",
    "components/rae_bmp",
    "components/rae_png",
    "components/rae_jpeg",
    "components/rae_webp",
    "components/rae_files",
    "components/raeen_linuxkpi",
    "components/raeen_drm",
    "components/raeen_amdgpu",
    "components/raeen_nvidia",
    "components/raehid",
    "amdgpud",
    "i915d",
    "nvidiad",
    "raelangd",
    "raeinstaller",
    "user_init", "driver_supervisor", "hello_window",
    "apps/terminal", "apps/calculator", "apps/rae-sh", "apps/files", "apps/photos", "apps/music", "apps/video", "apps/notes", "apps/clock", "apps/settings", "apps/text_editor", "apps/task_mgr", "apps/passwords", "apps/calendar", "apps/browser", "apps/mail", "apps/vpn", "apps/sync", "apps/weather", "apps/contacts", "apps/hello_raeui", "components/kanata_daemon", "hello_relibc", "hello_linuxkpi", "linux_hello", "raebridge_host", "raebridge_run",
]

# `kernel` is a workspace member (shares Cargo.lock + target dir) but is excluded
# from default `cargo build` because it targets bare-metal x86_64-unknown-none.
# Build it through `cargo run -p xtask -- build` or `cargo build -p kernel --target x86_64-unknown-none`.
default-members = [
    "xtask",
    "components/athbody",
    "components/athsense",
    "components/athmind",
    "components/athvoice",
    "components/athguard",
    "components/raefs",
    "components/pcid",
    "components/raefat",
    "components/raegfx",
    "components/raeaudio",
    "components/raepkg",
    "components/raewasm",
    "components/raeui",
    "components/raekit",
    "components/raeshield",
    "components/raenet",
    "components/raessh",
    "components/raestore",
    "components/raeid",
    "components/raesync",
    "components/raebridge",
    "components/raeprint",
    "components/raeplay",
    "components/raeshell",
    "components/raemedia",
    "components/raeweb",
    "components/raecloud",
    "components/raeupdate",
    "components/raesettings",
    "components/raeai",
    "components/raeaccessibility",
    "components/raevpn",
    "components/raebackup",
    "components/raecontainer",
    "components/raepackage",
    "components/raefont",
    "components/raelocale",
    "components/rae_crypto",
    "components/rae_tokens",
    "components/rae_calc",
    "components/rae_zip",
    "components/rae_files",
    "components/raehid",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MPL-2.0"
authors = ["RaeenOS contributors"]
repository = "https://github.com/raeenos/raeenos"

# Vendored aml crate (rust-osdev aml 0.16.4) with RaeenOS fixes: Athena's
# AMI/AMD firmware uses AML constructs 0.16.4 doesn't parse (MasterChecklist
# Phase 1.4 — DSDT UnexpectedByte(0x5B..) → empty namespace → no _PRT/EC).
# Patched here so the kernel and host tools (tools/aml_probe) share the fix.
[patch.crates-io]
aml = { path = "components/vendored/aml" }
# Vendored linked_list_allocator 0.10.6 (phil-opp, MIT/Apache-2.0) with RaeenOS
# freelist hardening: the intrusive `Hole.next` link is stored XOR-obfuscated +
# location-tied and validated on every deref (fail-closed panic on corruption).
# Always-on in the default build; hardens BOTH the kernel heap and the
# raeen_linuxkpi userspace-driver shim (both pin 0.10). MasterChecklist "Latent
# kernel bugs" — the DMA-UAF-corrupts-freelist class.
linked_list_allocator = { path = "components/vendored/linked_list_allocator" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
