[workspace]
resolver = "2"
exclude = ["target"]
members = [
    "kernel",
    "xtask",
    "components/athbody",
    "components/athsense",
    "components/athmind",
    "components/athvoice",
    "components/athguard",
    "components/athfs",
    "components/pcid",
    "components/athfat",
    "components/athgfx",
    "components/athaudio",
    "components/athpkg",
    "components/athwasm",
    "components/athui",
    "components/athkit",
    "components/athshield",
    "components/athnet",
    "components/athssh",
    "components/athstore",
    "components/athid",
    "components/athsync",
    "components/athbridge",
    "components/athprint",
    "components/athplay",
    "components/athshell",
    "components/athmedia",
    "components/athweb",
    "components/athcloud",
    "components/athupdate",
    "components/athsettings",
    "components/athai",
    "components/athaccessibility",
    "components/athvpn",
    "components/athbackup",
    "components/athcontainer",
    "components/athpackage",
    "components/athfont",
    "components/athlang",
    "components/athlocale",
    "components/ath_abi",
    "components/ath_render_broker",
    "components/aarch64_logic",
    "components/ath_crypto",
    "components/ath_driver_api",
    "components/ath_tokens",
    "components/ath_calc",
    "components/ath_time",
    "components/ath_json",
    "components/ath_hash",
    "components/ath_csv",
    "components/ath_toml",
    "components/ath_diff",
    "components/ath_formats",
    "components/ath_image",
    "components/ath_encode",
    "components/ath_regex",
    "components/ath_js",
    "components/ath_pwa",
    "components/ath_markdown",
    "components/ath_mail",
    "components/ath_pim",
    "components/ath_mime",
    "components/ath_zip",
    "components/ath_kv",
    "components/ath_otp",
    "components/ath_keychain",
    "components/ath_docx",
    "components/ath_xlsx",
    "components/ath_pdf",
    "components/ath_mp4",
    "components/ath_deflate",
    "components/ath_tar",
    "components/ath_gif",
    "components/ath_bmp",
    "components/ath_png",
    "components/ath_jpeg",
    "components/ath_webp",
    "components/ath_files",
    "components/ath_linuxkpi",
    "components/ath_drm",
    "components/ath_amdgpu",
    "components/ath_nvidia",
    "components/athhid",
    "amdgpud",
    "i915d",
    "nvidiad",
    "athlangd",
    "athinstaller",
    "user_init", "driver_supervisor", "hello_window",
    "apps/terminal", "apps/calculator", "apps/ath-sh", "apps/files", "apps/photos", "apps/music", "apps/video", "apps/notes", "apps/clock", "apps/settings", "apps/text_editor", "apps/task_mgr", "apps/passwords", "apps/calendar", "apps/browser", "apps/mail", "apps/vpn", "apps/sync", "apps/weather", "apps/contacts", "apps/hello_athui", "components/kanata_daemon", "hello_relibc", "hello_linuxkpi", "linux_hello", "athbridge_host", "athbridge_run",
]

# `kernel` is a workspace member (shares Cargo.lock + target dir) but is excluded
# from default `cargo build` because it targets bare-metal x86_64-unknown-none.
# Build it through `cargo run -p xtask -- build` or `cargo build -p kernel --target x86_64-unknown-none`.
default-members = [
    "xtask",
    "components/athbody",
    "components/athsense",
    "components/athmind",
    "components/athvoice",
    "components/athguard",
    "components/athfs",
    "components/pcid",
    "components/athfat",
    "components/athgfx",
    "components/athaudio",
    "components/athpkg",
    "components/athwasm",
    "components/athui",
    "components/athkit",
    "components/athshield",
    "components/athnet",
    "components/athssh",
    "components/athstore",
    "components/athid",
    "components/athsync",
    "components/athbridge",
    "components/athprint",
    "components/athplay",
    "components/athshell",
    "components/athmedia",
    "components/athweb",
    "components/athcloud",
    "components/athupdate",
    "components/athsettings",
    "components/athai",
    "components/athaccessibility",
    "components/athvpn",
    "components/athbackup",
    "components/athcontainer",
    "components/athpackage",
    "components/athfont",
    "components/athlocale",
    "components/ath_crypto",
    "components/ath_tokens",
    "components/ath_calc",
    "components/ath_zip",
    "components/ath_files",
    "components/athhid",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MPL-2.0"
authors = ["AthenaOS contributors"]
repository = "https://github.com/athenaos/athenaos"

# Vendored aml crate (rust-osdev aml 0.16.4) with AthenaOS fixes: Athena's
# AMI/AMD firmware uses AML constructs 0.16.4 doesn't parse (MasterChecklist
# Phase 1.4 — DSDT UnexpectedByte(0x5B..) → empty namespace → no _PRT/EC).
# Patched here so the kernel and host tools (tools/aml_probe) share the fix.
[patch.crates-io]
aml = { path = "components/vendored/aml" }
# Vendored linked_list_allocator 0.10.6 (phil-opp, MIT/Apache-2.0) with AthenaOS
# freelist hardening: the intrusive `Hole.next` link is stored XOR-obfuscated +
# location-tied and validated on every deref (fail-closed panic on corruption).
# Always-on in the default build; hardens BOTH the kernel heap and the
# ath_linuxkpi userspace-driver shim (both pin 0.10). MasterChecklist "Latent
# kernel bugs" — the DMA-UAF-corrupts-freelist class.
linked_list_allocator = { path = "components/vendored/linked_list_allocator" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
