[package]
name = "athinstaller"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "athinstaller — AthenaOS userspace installer. Partitions the target disk, formats the ESP (FAT32) + AthFS root, writes the EFI boot tree, via SYS_INSTALL_RUN."

[dependencies]
ath_abi = { path = "../components/ath_abi" }

[[bin]]
name = "athinstaller"
path = "src/main.rs"
