[package]
name = "raebridge_run"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# raekit provides the userspace #[global_allocator] (mmap-backed).
raekit = { path = "../components/raekit" }
raebridge = { path = "../components/raebridge" }
