[package]
name = "user_init"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
raegfx = { path = "../components/raegfx" }
raeui = { path = "../components/raeui" }
raekit = { path = "../components/raekit" }
