[package]
name = "user_init"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
athgfx = { path = "../components/athgfx" }
athui = { path = "../components/athui" }
athkit = { path = "../components/athkit" }
