[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Build automation for RaeenOS — builds the kernel, creates a bootable image, and launches QEMU."

[dependencies]
bootloader = "0.11"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
# FAT16 formatter for the QEMU USB-MSC test image: lets the boot smoketest
# exercise the real bootlog-on-USB path (locate + write BOOTLOG.TXT on a stick).
fatfs = "0.3"
fscommon = "0.1"
# App-bundle code signing (Phase 9.2): xtask signs each staged RaeManifest.toml
# (with an injected elf_sha256) using the dev Ed25519 key in keys/; the kernel
# verifies with the embedded public key at app launch.
ed25519-dalek = "2"
sha2 = "0.10"
hex = "0.4"
getrandom = "0.2"
