[package]
name = "browser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "browser"
path = "src/lib.rs"

# Binary target: the freestanding userspace ELF (`_start` -> `browser::run()`).
# `exec_path = "browser"` in the start-menu manifest resolves to this.
[[bin]]
name = "browser"
path = "src/main.rs"
# The bin is a freestanding `#![no_main]` ELF shim with no libtest entry point, so
# exclude it from `cargo test` (otherwise the host test build tries to link it as a
# test exe and fails LNK1561 "entry point must be defined"). The host KAT lives in
# the LIBRARY target.
test = false

[features]
# Forwards to `athkit/host`: lets the std `cargo test` harness link `browser`
# (-> `athkit`) without athkit's bare-ELF lang items colliding with std (E0152
# duplicate panic_impl). The normal `cargo build -p browser --target
# x86_64-unknown-none` ELF leaves this off and is unchanged. The host KAT runs
# with `cargo test -p browser --features host`.
host = ["athkit/host"]

[dependencies]
athgfx = { path = "../../components/athgfx" }
athkit = { path = "../../components/athkit" }
ath_tokens = { path = "../../components/ath_tokens" }
# The HTML/CSS engine: tokenizer -> parser -> DOM -> CSS cascade -> layout -> paint.
# RenderPipeline::render_to_layout gives the laid-out box tree; backend::
# paint_displaylist_to_canvas blits a DisplayList to a athgfx Canvas.
athweb = { path = "../../components/athweb" }
# The ECMAScript interpreter: Interpreter::eval_str runs an inline <script> for its
# evaluation + console side effects; take_console_output captures the observable.
ath_js = { path = "../../components/ath_js" }
# The HTTP/1.1 client + transport seam: http1::HttpTransport is the injectable
# byte transport the address-bar fetch rides on. The live ELF wraps a real socket
# in RaeSocketTransport; the host KAT drives http1::MockTransport with a canned
# response. (athweb's loader already consumes this; the app needs it directly to
# name the trait + construct the transports.)
athnet = { path = "../../components/athnet" }
