[package]
name = "calculator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
athgfx = { path = "../../components/athgfx" }
athkit = { path = "../../components/athkit" }
ath_tokens = { path = "../../components/ath_tokens" }
ath_calc = { path = "../../components/ath_calc" }
ath_toml = { path = "../../components/ath_toml" }
