[package]
name = "calendar"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# Library target: the app's state + draw path + the syscall-free PIM MODEL
# (`PimModel`) so a host KAT can link the LIVE engine (ath_pim) with no kernel.
# This is the structure `apps/files` and `apps/passwords` use.
[lib]
name = "calendar"
path = "src/lib.rs"

# Binary target: the freestanding userspace ELF (`_start` -> `calendar::run()`).
# `exec_path = "calendar"` in the start-menu manifest resolves to this.
[[bin]]
name = "calendar"
path = "src/main.rs"
# The bin is a freestanding `#![no_main]` ELF shim — it has no libtest entry
# point, so exclude it from `cargo test` (otherwise the host test build tries to
# link it as a test exe and fails). The host KAT lives entirely in the LIBRARY
# target.
test = false

[features]
# Forwards to `athkit/host`: lets the std `cargo test` harness link `calendar`
# (-> `athkit`) without athkit's bare-ELF lang items colliding with std (E0152
# duplicate panic_impl). The normal `cargo build -p calendar --target
# x86_64-unknown-none` ELF leaves this off and is unchanged. The host KAT runs
# with `cargo test -p calendar --features host`.
host = ["athkit/host"]

[dependencies]
athgfx = { path = "../../components/athgfx" }
athkit = { path = "../../components/athkit" }
ath_tokens = { path = "../../components/ath_tokens" }
# The LIVE, already-host-KAT'd PIM engine: iCalendar (.ics) + vCard (.vcf)
# parsers, the RRULE recurrence expander, civil date math, and the POSIX
# timezone engine. This app is the clickable shell over it.
ath_pim = { path = "../../components/ath_pim" }
